--- a/MYProject/WebContent/success.html
+++ b/MYProject/WebContent/success.html
@@ -5,8 +5,8 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<h1>India</h1>
-	<p>India is my country and all indians are ..</p>
-	<p>This is a new line!</p>
+	<h1>Successfully Inserted</h1>
+	
+	<a href="index.jsp">HOME</a>		
 </body>
 </html>
